--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #fb0;
+    --clr-accent: #ff2a2a;
     
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -52,10 +52,12 @@ body {
 img {
     display: block;
     max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 section {
-    padding: 5em 2em;
+    padding: 2em 2em;
 }
 
 /* Typography */
@@ -97,6 +99,10 @@ h3 { font-size: var(--fs-h3) }
     font-family: var(--ff-secondary);
 }
 
+.section__experience {
+    border-style: dotted;
+    border-color: var(--clr-dark);
+}
 
 /* header */
 
@@ -272,7 +278,7 @@ header {
 
 .about-me__img {
     box-shadow: var(--bs);
-    filter: saturate(0%);
+    /* filter: saturate(0%); */
 }
 
 @media (min-width: 600px) {
@@ -311,7 +317,7 @@ header {
 
 .my-work {
     background-color: var(--clr-accent);
-    color: var(--clr-light);
+    color: var(--clr-dark);
     text-align: center;    
 }
 
@@ -320,9 +326,17 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
+/* Styles for mobile screens */
+@media (max-width: 768px) {
+    .portfolio {
+      display: block;
+    }
+  }
+
 .portfolio__item {
     background: var(--clr-accent);
     overflow: hidden;
+    margin: 5px;
     
     
 }
@@ -331,6 +345,7 @@ header {
     transition: 
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
+        /* border-style: groove; */
 }
 
 .portfolio__item:focus {
@@ -359,10 +374,28 @@ header {
     color: inherit;
     text-decoration: none;
 }
+/* 
+.footer__link {
+    font-weight: var(--fw-bold);
+} */
 
 .footer__link {
     font-weight: var(--fw-bold);
-}
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: var(--clr-dark); /* Green background */
+    color: white;
+    text-align: center;
+    text-decoration: none; /* Removes underline */
+    border-radius: 5px; /* Rounded corners */
+    font-size: var(--fs-h3);
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .mail-button:hover {
+    background-color: #45a049; /* Darker green when hovered */
+  }
 
 .footer__link:hover,
 .social-list__link:hover {
