Updated accent color

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     
     --clr-light: #fff;
     --clr-dark: #303030;
-    --clr-accent: #ff2a2a;
+    --clr-accent: #ff982a;
     
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
