--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ body {
     
 }
 
+@media (prefers-color-scheme: dark) {
+    body {
+        background-image: none;
+    }
+}
+
 img {
     display: block;
     max-width: 100%;
