--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ header {
         width: calc(100% + 1.5em);
         display: inline-block;
         background: var(--clr-cleaning);
+        font-family: var(--ff-secondary);
     }
 
 @media (min-width: 600px) {
