--- a/style.css
+++ b/style.css
@@ -9,17 +9,17 @@
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
-    
+
     --fw-reg: 300;
     --fw-bold: 900;
-    
+
     --clr-light: #fff;
     --clr-dark: #303030;
     --clr-accent: #ff982a;
 
     --clr-cleaning: linear-gradient(180deg, #ff9a9e 0%, #fad0c4 40%, #fbc2eb 70%, #a6c1ee 100%);
 
-    
+
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
@@ -49,7 +49,7 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
-    
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -78,9 +78,17 @@ h3 {
     margin: 0;
 }
 
-h1 { font-size: var(--fs-h1) }
-h2 { font-size: var(--fs-h2) }
-h3 { font-size: var(--fs-h3) }
+h1 {
+    font-size: var(--fs-h1)
+}
+
+h2 {
+    font-size: var(--fs-h2)
+}
+
+h3 {
+    font-size: var(--fs-h3)
+}
 
 
 
@@ -135,7 +143,7 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
-    
+
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
@@ -197,8 +205,13 @@ header {
     right: 0;
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
+}
 
 
 
@@ -213,17 +226,17 @@ header {
 }
 
 .section__subtitle--intro--cleaning {
-        align-self: start;
-        grid-column: -1 / 1;
-        grid-row: 2;
-        text-align: right;
-        position: relative;
-        left: -1.5em;
-        width: calc(100% + 1.5em);
-        display: inline-block;
-        background: var(--clr-cleaning);
-        font-family: var(--ff-secondary);
-    }
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
+    display: inline-block;
+    background: var(--clr-cleaning);
+    font-family: var(--ff-secondary);
+}
 
 @media (min-width: 600px) {
     .intro {
@@ -231,19 +244,19 @@ header {
         width: min-content;
         margin: 0 auto;
         grid-column-gap: 1em;
-        grid-template-areas: 
+        grid-template-areas:
             "img title"
             "img subtitle";
         grid-template-columns: min-content max-content;
     }
-    
+
     .intro__img {
         grid-area: img;
         min-width: 250px;
         position: relative;
         z-index: 2;
-    }    
-    
+    }
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -257,7 +270,7 @@ header {
 }
 
 .section__skills {
-    font-size:40px;
+    font-size: 40px;
 }
 
 @media (min-width: 600px) {
@@ -266,19 +279,19 @@ header {
         width: min-content;
         margin: 0 auto;
         grid-column-gap: 1em;
-        grid-template-areas: 
+        grid-template-areas:
             "img title"
             "img subtitle";
         grid-template-columns: min-content max-content;
     }
-    
+
     .intro__img {
         grid-area: img;
         min-width: 250px;
         position: relative;
         z-index: 2;
-    }    
-    
+    }
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -306,17 +319,17 @@ header {
     .about-me {
         display: grid;
         grid-template-columns: 1fr 200px;
-        grid-template-areas: 
+        grid-template-areas:
             "title img"
             "subtitle img"
             "text img";
         grid-column-gap: 2em;
     }
-    
+
     .section__title--about {
         grid-area: title;
     }
-    
+
     .section__subtitle--about {
         grid-column: 1 / -1;
         grid-row: 2;
@@ -326,7 +339,7 @@ header {
         padding-left: 1em;
         padding-right: calc(200px + 4em);
     }
-    
+
     .about-me__img {
         grid-area: img;
         position: relative;
@@ -339,7 +352,7 @@ header {
 .my-work {
     background-color: var(--clr-accent);
     color: var(--clr-dark);
-    text-align: center;    
+    text-align: center;
 }
 
 .portfolio {
@@ -350,23 +363,23 @@ header {
 /* Styles for mobile screens */
 @media (max-width: 768px) {
     .portfolio {
-      display: block;
+        display: block;
     }
-  }
+}
 
 .portfolio__item {
     background: var(--clr-accent);
     overflow: hidden;
     margin: 5px;
-    
-    
+
+
 }
 
 .portfolio__img {
-    transition: 
+    transition:
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
-        /* border-style: groove; */
+    /* border-style: groove; */
 }
 
 .portfolio__item:focus {
@@ -391,10 +404,11 @@ header {
 
 }
 
-.footer a { 
+.footer a {
     color: inherit;
     text-decoration: none;
 }
+
 /* 
 .footer__link {
     font-weight: var(--fw-bold);
@@ -404,19 +418,23 @@ header {
     font-weight: var(--fw-bold);
     display: inline-block;
     padding: 10px 20px;
-    background-color: var(--clr-dark); /* Green background */
+    background-color: var(--clr-dark);
+    /* Green background */
     color: white;
     text-align: center;
-    text-decoration: none; /* Removes underline */
-    border-radius: 5px; /* Rounded corners */
+    text-decoration: none;
+    /* Removes underline */
+    border-radius: 5px;
+    /* Rounded corners */
     font-size: var(--fs-h3);
     cursor: pointer;
     margin: 5px;
-  }
-  
-  .mail-button:hover {
-    background-color: #45a049; /* Darker green when hovered */
-  }
+}
+
+.mail-button:hover {
+    background-color: #45a049;
+    /* Darker green when hovered */
+}
 
 .footer__link:hover,
 .social-list__link:hover {
@@ -464,27 +482,30 @@ header {
 }
 
 #musicButton {
-      position: absolute;
-      top: 20px;       /* distance from top */
-      right: 20px;     /* distance from right */
-      padding: 10px 15px;
-      font-family: var(--ff-primary);
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background-color: var(--clr-accent);
-      color: var(--clr-dark);
-      cursor: pointer;
-      box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
-    }
+    position: absolute;
+    top: 20px;
+    /* distance from top */
+    right: 20px;
+    /* distance from right */
+    padding: 10px 15px;
+    font-family: var(--ff-primary);
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    background-color: var(--clr-accent);
+    color: var(--clr-dark);
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
 
-    #musicButton:hover {
-      background-color: #faa851;
-    }
+#musicButton:hover {
+    background-color: #faa851;
+}
 
 canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1; /* Push canvas behind everything */
-    }
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    /* Push canvas behind everything */
+}
