--- a/style.css
+++ b/style.css
@@ -746,6 +746,39 @@ body.dark-mode {
     }
 }
 
+/* -------------------------------------------------- */
+/* ---------------- SECTION: INTRODUCTION ----------- */
+/* -------------------------------------------------- */
+
+@media (prefers-color-scheme: dark) {
+    .section__title--intro {
+        font-weight: var(--fw-reg);
+        color: antiquewhite;
+    }
+
+    .section__subtitle--intro {
+        color: black;
+        background: chocolate;
+    }
+}
+
+
+
+/* -------------------------------------------------- */
+/* ---------------- SECTION: ABOUT ME --------------- */
+/* -------------------------------------------------- */
+
+@media (prefers-color-scheme: dark) {
+    .section__title--about {
+        /* font-weight: var(--fw-reg); */
+        color: antiquewhite;
+    }
+
+    .section__subtitle--about {
+        color: black;
+        background: chocolate;
+    }
+}
 
 /* -------------------------------------------------- */
 /* ---------------- SECTION: MY WORK ----------------- */
@@ -757,20 +790,35 @@ body.dark-mode .my-work {
 }
 
 @media (prefers-color-scheme: dark) {
+    .section__title {
+        /* font-weight: var(--fw-reg); */
+        color: antiquewhite;
+    }
+
+
+    .section__title__skills {
+        /* font-weight: var(--fw-reg); */
+        color: antiquewhite;
+    }
+
     .my-work {
         background-color: #1f1f1f;
         color: var(--clr-dark);
     }
+
+    .skills-toggle {
+        background: chocolate;
+    }
 }
 
-
+/* 
 /* -------------------------------------------------- */
 /* --------------- PORTFOLIO OVERLAYS ---------------- */
 /* -------------------------------------------------- */
 
 body.dark-mode .overlay__text {
-    background: rgba(255, 255, 255, 0.12);
-    color: var(--clr-dark);
+    /* background: rgba(255, 255, 255, 0.12);
+    color: var(--clr-dark); */
 }
 
 body.dark-mode .portfolio__item {
@@ -778,10 +826,10 @@ body.dark-mode .portfolio__item {
 }
 
 @media (prefers-color-scheme: dark) {
-    .overlay__text {
+    /* .overlay__text {
         background: rgba(255, 255, 255, 0.12);
         color: var(--clr-dark);
-    }
+    } */
 
     .portfolio__item {
         background: #222;
@@ -860,6 +908,24 @@ body.dark-mode .skill {
 
 @media (prefers-color-scheme: dark) {
     .skill {
+        background: var(--bg-alt);
+        color: var(--clr-dark);
+        box-shadow: rgba(255, 255, 255, 0.05) 0 1px 2px;
+    }
+}
+
+/* -------------------------------------------------- */
+/* -------------- FOOTER ---------------------------- */
+/* -------------------------------------------------- */
+
+body.dark-mode .footer__link {
+    background: var(--bg-alt);
+    color: var(--clr-dark);
+    box-shadow: rgba(255, 255, 255, 0.05) 0 1px 2px;
+}
+
+@media (prefers-color-scheme: dark) {
+    .footer__link {
         background: var(--bg-alt);
         color: var(--clr-dark);
         box-shadow: rgba(255, 255, 255, 0.05) 0 1px 2px;
